<resources>
    <string name="app_name">Insurify</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="splash_screen_title">Insurify</string>
    <string name="menu_locator">Locator</string>
    <string name="menu_support">Support</string>
    <string name="menu_elocker">E-Locker</string>
    <string name="menu_more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="locator_titles">Hospitals</string>
    <string name="claim_support">Let us resolve your claim and renewal related query for your existing policy</string>
    <string name="country_code">* Please add respective country code before dialing the number</string>
    <string name="about_locker">E-Locker will allow you to store your all require documents, Which facilitate you to use those document at any time.</string>
    <string name="storage_permission_never_ask">To capture or select photos, allow Insurify access to your device\'s photos and media. \nTap Settings > Permissions, and turn Storage on.</string>
    <string name="camera_permission_never_ask">To capture and store photos, allow Insurify access to your camera and storage. \nTap Settings > Permissions, and turn Camera and Storage on.</string>
    <string name="video_permission_never_ask">To capture and store videoes, allow Insurify access to your camera, Microphone and storage. \nTap Settings > Permissions, and turn Camera,Microphone and Storage on.</string>
    <string name="calender_permission_never_ask">To add event in calender, allow Insurify access to your Calender. \nTap Settings > Permissions, and turn Calender on.</string>
    <string name="permission_never_ask">Allow Insurify access to your Calender. \nTap Settings > Give permissions.</string>
    <string name="permission_manually">Permit Manually</string>
    <string name="message_delete_all_notifications">Are you sure want to delete all notifications ?</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name_hint">username</string>
    <string name="user_name_placeholder">Username</string>
    <string name="password">Password</string>
    <string name="password_hint">password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username_password_is_blank">Username or Password not provided</string>
</resources>