<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="220dp"
            android:background="#F2F1EF"
            android:orientation="vertical"
            android:padding="@dimen/_30dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="@dimen/_28sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginTop="20dp"
                android:text="@string/user_name_placeholder"
                android:textColor="@color/text_color_414141"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edit_text_white_rounded_bg"
                android:hint="@string/user_name_hint"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:padding="@dimen/_10dp"
                android:singleLine="true"
                android:textSize="@dimen/textsize_14sp"
                android:textStyle="normal"
                android:text="doeJhon"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_16dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/text_color_414141"
                android:textSize="@dimen/_12sdp"
                android:text="@string/password"
                android:textStyle="normal" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/edit_text_white_rounded_bg"
                android:hint="@string/password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_10dp"
                android:singleLine="true"
                android:textSize="@dimen/textsize_14sp"
                android:textStyle="normal"
                android:text="jhon@123"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="22dp"
                app:cardElevation="@dimen/_10dp"
                app:cardUseCompatPadding="true">

                <com.solvathon.ui.customview.CustomProgressButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@drawable/blue_btn_rounded" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/forgotPassBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:onClick="onForgetPassword"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="normal" />

            <ProgressBar
                android:id="@+id/progressForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:clickable="false"
                android:enabled="false"
                android:indeterminateTint="@color/colorPrimary"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/colorPrimary"
                android:visibility="gone" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />


    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>